# dotfiles

./: .stow-local-ignore
flameshot/.config/flameshot/: flameshot.ini
guides/: .stow-local-ignore  add_windows_to_bootloader.md  disk-btrfs.md  disk_btrfs.md  enable_secure_boot.md  wifi.md
hypr/.config/hypr/: hyprland.conf
kitty/.config/kitty/: current-theme.conf  kitty.conf
nvim/.config/nvim/: init.lua  lazy-lock.json
nvim/.config/nvim/lua/config/: keymaps.lua  options.lua
nvim/.config/nvim/lua/plugins/: alpha.lua  colorscheme.lua  completion.lua  indent-backline.lua  lsp-config.lua  lualine.lua  neoTree.lua  none-ls.lua  telescope.lua  treesitter.lua
satty/: config.toml
scripts/: .stow-local-ignore  Cargo.toml  btrfs-setup.sh  iwctl-setup.sh  post-install.sh
scripts/src/: cli.rs  colors.rs  main.rs
scripts/src/commands/: mod.rs
scripts/src/commands/core/: mod.rs
scripts/src/commands/core/disk_setup/: helpers.rs  mod.rs  structs.rs
scripts/src/helpers/: ensure_tool_exists.rs  mod.rs  pacman_install.rs  pacman_sync.rs  prompt_user.rs  require_root.rs  run.rs
tmux/.config/tmux/: tmux.conf
zed/.config/zed/: settings.json
zed/.config/zed/themes/: carbon-theme.json  flate-theme.json
zsh/: .zshrc
