[package]
name = "sharch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
flate2 = "1.1.2"
hex = "0.4.3"
ignore = "0.4.23"
serde = {version="1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sha1 = "0.10.6"
walkdir = "2.5.0"
colored = "2.1"
which = "4.4"
dialoguer = "0.12.0"
shell-words = "1.1"


